@@ -1,3 +1,8 @@
+2007-02-15  Ulrich Drepper  <drepper@redhat.com>
+
+	* nscd/nscd_helper.c (open_socket): Don't send padding bytes from
+	reqdata.
+
 2007-02-13  Ulrich Drepper  <drepper@redhat.com>
 
 	* po/ru.po: Update from translation team.
